corrected spacing on the shops page.

--- a/themes/inhabitant/sass/_elements.scss
+++ b/themes/inhabitant/sass/_elements.scss
@@ -109,10 +109,10 @@ table {
 body.archive {
 	.page-header {
 		ul {
-			margin: 60px auto;
+			margin: 0 0 30px;
 			padding: 0;
 			text-align: center;
-			padding-bottom: 60px;
+			padding-bottom: 40px;
 			border-bottom: 1px $color__border dashed;
 		}
 
@@ -120,8 +120,9 @@ body.archive {
 			text-align: center;
 			padding-top: 100px;
 			text-transform: uppercase;
-			font-size: 2.6em;
+			font-size: 2.5rem;
 			margin-top:0;
+			margin-bottom: 20px;
 		}
 	}
 }
@@ -136,9 +137,9 @@ body.archive {
 .stuff {
 	display: inline;
 	text-align: center;
-	margin: 20px;
+	margin: 23px;
 	text-transform: uppercase;
-	font-size: 1.5em;
+	font-size: 1.2rem;
 	a {
 		text-decoration: none;
 	}
@@ -149,6 +150,7 @@ body.archive {
 		padding:0;
 		z-index: 10;
 		background-color: $color__background-body;
+		font-family: Merriweather;
 	}
 }
 
@@ -182,145 +184,4 @@ article.type-product {
 
 .blog .page-title {
 	display: none;
-}
-
-//footer
-.site-footer {
-	background-image: url('../../assets/images/footer/dark-wood@2x.png');
-	background-size: contain;
-	background-repeat: repeat;
-}
-
-.footer-widget-area {
-	padding: 50px 70px 0;
-	height: auto;
-	color: white;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	position: relative;
-	font-size: 1rem;
-	font-family: Merriweather;
-	h2 {
-		color: $color__orange-brand;
-		font-size: 1.5rem;
-		text-transform: uppercase;
-		font-family: Novecentosanswide;
-		font-weight: bold;
-		i {
-			color: white;
-		}
-	}
-	a:link {
-		color: white;
-		text-decoration: none;
-		&:hover {
-			text-decoration: underline;
-		}
-	}
-	i, .contact-meta i {
-		padding-right: 10px;
-		font-size: 1.1rem;
-	}
-	.social {
-		margin-top: 5px;
-		i {
-			font-size: 1.5rem;
-		}
-	}
-	#text-6 {
-		grid-column: 1;
-	}
-	#tent-biz-hours-5 {
-		grid-column: 2;
-	}
-	.footer-logo {
-		background-image: url('../../assets/images/inhabitent-logo-text.svg');
-		grid-column: 4;
-		margin: 20px 0;
-		background-size: contain;
-		background-repeat: no-repeat;
-		a {
-			font-size: 3.6rem;
-			position: relative;
-			top: 10px;
-			color: rgba(0,0,0,0);
-		}
-	}
-	span {
-		font-weight: bold;
-	}
-}
-
-p.copyright {
-	text-transform: uppercase;
-	color: white;
-	text-align: center;
-	padding: 30px;
-	margin: 0;
-	span {
-		font-size: 0.8rem;
-	}
-}
-
-//sidebar
-.side-widget-area {
-	border-left: 1px $color__border solid;
-	float: right;
-	position: relative;
-	width: 300px;
-	padding: 30px 0 0 50px;
-	top: 50px;
-	aside {
-		margin-top: 20px;
-	}
-}
-
-#text-3 .widget-title, #tent-biz-hours-3 .widget-title, #archives-2 .widget-title {
-	text-transform: uppercase;
-	font-weight: bold;
-	font-size: 1.4rem;
-	letter-spacing: 3px;
-	padding-top: 30px;
-}
-
-.day-of-week {
-	font-weight: bold;
-}
-
-.tent-biz-hours-class {
-	p {
-		font-family: Merriweather;
-		margin-bottom: 15px;
-	}
-}
-
-.widget-phone, .contact-meta {
-	font-size: 1.05rem;
-	font-family: Merriweather;
-	i {
-		font-size: 1rem;
-		padding-right: 11px;
-	}
-	a {
-		font-family: Merriweather;
-		text-decoration: none;
-	}
-	span {
-		margin-left: 18px;
-	}
-}
-
-#archives-2 {
-	ul {
-		margin: 0;
-		padding: 0;
-		li {
-			display: block;
-			font-family: Merriweather;
-			margin: 5px 0;
-			a {
-				text-decoration: none;
-			}
-		}
-	}
 }
