--- a/themes/inhabitant/sass/_fonts.scss
+++ b/themes/inhabitant/sass/_fonts.scss
@@ -81,5 +81,5 @@ h1.page-title {
 }
 
 .single-product-price p {
-  font-family: Novecentosanswide;
+  font-family: Merriweather;
 }
