--- a/themes/inhabitant/sass/_widgets.scss
+++ b/themes/inhabitant/sass/_widgets.scss
@@ -22,3 +22,143 @@
 	position: relative;
 	right: 0;
 }
+//sidebar
+.side-widget-area {
+	border-left: 1px $color__border solid;
+	float: right;
+	position: relative;
+	width: 300px;
+	padding: 30px 0 0 50px;
+	top: 50px;
+	aside {
+		margin-top: 20px;
+	}
+}
+
+#text-3 .widget-title, #tent-biz-hours-3 .widget-title, #archives-2 .widget-title {
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 1.4rem;
+	letter-spacing: 3px;
+	padding-top: 30px;
+}
+
+.day-of-week {
+	font-weight: bold;
+}
+
+.tent-biz-hours-class {
+	p {
+		font-family: Merriweather;
+		margin-bottom: 15px;
+	}
+}
+
+.widget-phone, .contact-meta {
+	font-size: 1.05rem;
+	font-family: Merriweather;
+	i {
+		font-size: 1rem;
+		padding-right: 11px;
+	}
+	a {
+		font-family: Merriweather;
+		text-decoration: none;
+	}
+	span {
+		margin-left: 18px;
+	}
+}
+
+#archives-2 {
+	ul {
+		margin: 0;
+		padding: 0;
+		li {
+			display: block;
+			font-family: Merriweather;
+			margin: 5px 0;
+			a {
+				text-decoration: none;
+			}
+		}
+	}
+}
+
+//footer
+.site-footer {
+	background-image: url('../../assets/images/footer/dark-wood@2x.png');
+	background-size: contain;
+	background-repeat: repeat;
+}
+
+.footer-widget-area {
+	padding: 50px 70px 0;
+	height: auto;
+	color: white;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	position: relative;
+	font-size: 1rem;
+	font-family: Merriweather;
+	h2 {
+		color: $color__orange-brand;
+		font-size: 1.5rem;
+		text-transform: uppercase;
+		font-family: Novecentosanswide;
+		font-weight: bold;
+		i {
+			color: white;
+		}
+	}
+	a:link {
+		color: white;
+		text-decoration: none;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+	i, .contact-meta i {
+		padding-right: 10px;
+		font-size: 1.1rem;
+	}
+	.social {
+		margin-top: 5px;
+		i {
+			font-size: 1.5rem;
+		}
+	}
+	#text-6 {
+		grid-column: 1;
+	}
+	#tent-biz-hours-5 {
+		grid-column: 2;
+	}
+	.footer-logo {
+		background-image: url('../../assets/images/inhabitent-logo-text.svg');
+		grid-column: 4;
+		margin: 20px 0;
+		background-size: contain;
+		background-repeat: no-repeat;
+		a {
+			font-size: 3.6rem;
+			position: relative;
+			top: 10px;
+			color: rgba(0,0,0,0);
+		}
+	}
+	span {
+		font-weight: bold;
+	}
+}
+
+p.copyright {
+	text-transform: uppercase;
+	color: white;
+	text-align: center;
+	padding: 30px;
+	margin: 0;
+	span {
+		font-size: 0.8rem;
+	}
+}
